# smeg

./: .gitignore  CMakeLists.txt  Makefile
engine/: CMakeLists.txt
engine/src/: app.cpp  app.hpp  common.hpp  log.cpp  log.hpp  screen.cpp  screen.hpp
engine/src/ecs/: component.hpp  entity.cpp  system.cpp  system.hpp
engine/src/ecs/components/: sprite.cpp  sprite.hpp  text.hpp  transform.hpp
engine/src/ecs/components/debug/: fps.cpp  fps.hpp
engine/src/ecs/systems/debug/: fps_display.cpp  fps_display.hpp
engine/src/ecs/systems/renderers/: sprite_renderer.cpp  sprite_renderer.hpp  text_renderer.cpp  text_renderer.hpp
engine/src/graphics/: base_renderer.cpp  base_renderer.hpp  batch.cpp  batch.hpp  batch_renderer.cpp  batch_renderer.hpp  character.hpp  colour.hpp  font.hpp  graphics.cpp  graphics.hpp  image.cpp  material.hpp  opengl.cpp  opengl.hpp  opengl_renderer.cpp  opengl_renderer.hpp  render_command.hpp  render_pipeline.cpp  render_pipeline.hpp  sprite_batch.hpp  sprite_batch_renderer.cpp  sprite_batch_renderer.hpp  texture.cpp  texture.hpp
engine/src/graphics/backend/: opengl.cpp  opengl.hpp
engine/src/graphics/renderers/: opengl_renderer.cpp  opengl_renderer.hpp
engine/src/io/: file.cpp  file.hpp  image.cpp  image.hpp
engine/src/libs/: stb_truetype.h
engine/src/math/: matrix4.cpp  matrix4.hpp  rect.hpp  vector2.hpp  vector3.hpp
engine/src/service/: font_library.cpp  font_library.hpp  service.hpp  service_container.hpp  texture_library.cpp  texture_library.hpp  time.hpp  viewport.cpp  viewport.hpp
sample/: CMakeLists.txt
sample/res/: sprite_shader.frag  text_shader.frag
sample/src/: main.cpp  test_component.cpp  test_component.hpp  test_screen.cpp  test_screen.hpp  test_system.cpp  test_system.hpp
src/: app.cpp  app.hpp  common.hpp  main.cpp  screen.cpp  screen.hpp
src/ecs/: component.hpp  component_type.hpp  entity.cpp  entity.hpp  system.cpp  system.hpp
src/ecs/components/: sprite.cpp  sprite.hpp  sprite_component.cpp  sprite_component.hpp  text.hpp  text_component.cpp  text_component.hpp  transform.hpp
src/ecs/components/debug/: fps.hpp
src/ecs/systems/: draw_system.cpp  draw_system.hpp  sprite_renderer.cpp  sprite_renderer.hpp  text_renderer.cpp  text_renderer.hpp
src/ecs/systems/debug/: fps_display.cpp  fps_display.hpp
src/ecs/systems/renderers/: sprite_renderer.cpp  sprite_renderer.hpp  text_renderer.cpp  text_renderer.hpp
src/graphics/: batch.hpp  batch_renderer.cpp  batch_renderer.hpp  texture.cpp
src/math/: vector2.hpp
src/res/: texture.cpp  texture.hpp
src/service/: service.hpp  service_container.cpp  service_container.hpp  texture_library.cpp  texture_library.hpp  time.hpp
